<resources>
    <string name="app_name">FiestApp</string>

    <!--Login-->
    <string name="hint_email">Enter your e-mail</string>
    <string name="hint_pwd">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="tForgotPassword">Forgot password?</string>

    <!--Profile-->
    <string name="bProfile">Profile</string>
    <string name="tUserName">UserName</string>
    <string name="tAge">Age</string>

    <!--Messages-->
    <string name="bMessages">Messages</string>

    <!--Contacts-->
    <string name="bContacts">Contacts</string>

    <!--Places-->
    <string name="bPlaces">Places</string>

    <!--Exit-->
    <string name="bExit">Exit</string>


    <!--Testing-->
    <string name="test"></string>
</resources>
