<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.testappsandroid.fiestapp.Main.Main.MainActivity">


    <!--Profile Menu-->
    <LinearLayout
        android:id="@+id/buttonsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bProfile" />

        <Button
            android:id="@+id/bMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bMessages" />

        <Button
            android:id="@+id/bContacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bContacts" />

        <Button
            android:id="@+id/bPlaces"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bPlaces" />

        <Button
            android:id="@+id/bExit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bExit" />
    </LinearLayout>

    <!--Include XML's of menu buttons-->
    <RelativeLayout
        android:id="@+id/contentOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/profile_content"/>

        <include
            layout="@layout/messages_content"/>
    </RelativeLayout>

</LinearLayout>
